--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -5,20 +5,27 @@ body {
     font-family: Roboto;
     letter-spacing: 0.03em;
 }
-.list {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+
+@media screen and (min-width: 480px) {
+    .section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
 }
-h1, h2, h3, p {
-    margin: 0;
+@media screen and (min-width: 768px) {
+    .section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
 }
-.section {
+@media screen and (min-width: 1200px) {
+       .section {
     padding-top: 94px;
-    padding-bottom: 94px;
+    padding-bottom: 94px;    
 }
-    /*общее main*/
-    .section-title { 
+}
+    
+ .section-title { 
         margin-top: 0;
         margin-bottom: 50px;
     
@@ -38,5 +45,12 @@ h1, h2, h3, p {
         display: block;
         max-width: 100%;
         height: auto;
+    }.list {
+        padding: 0;
+        margin: 0;
+        list-style: none;
     }
-
+    h1, h2, h3, p {
+        margin: 0;
+    }
+    
