--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -197,11 +197,84 @@ textarea {
 .send-icon {
     margin-left: 10px;
 }
-.subscriber-form {
+@media screen and (min-width: 480px) {
+    .subscriber-form {
+        position: relative;
+    }
+    .form-hidden {
+        position: absolute;
+        overflow: hidden;
+        margin: 0;
+        padding: 0px;
+        width: 1px;
+        height: 1px;
+        
+        color: #FFFFFF99;    
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.21;
+        letter-spacing: 0.03em;
+        text-align: left;
+    }
+    .subscriber-email {
+        display: flex;
+        width: 358px;
+        height: 50px;
+        margin-right: 12px; 
+        padding-left: 16px;
+        padding-top: 12px;
+        padding-bottom: 12px;
+        outline: none;
+       
+        color: var(--herotitle) ;
+        background-color: #2F303A;
+        border: 1px solid #FFFFFF4D;   
+        border-radius: 4px;
+    }
+    
+}
+@media screen and (min-width: 768px) {
+    .subscriber-form {
+        position: relative;
+    
+    }
+    .form-hidden {
+        position: absolute;
+        overflow: hidden;
+        margin: 0;
+        padding: 0px;
+        width: 1px;
+        height: 1px;        
+        color: #FFFFFF99;    
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.21;
+        letter-spacing: 0.03em;
+        text-align: left;
+    }
+    .subscriber-email {
+        display: flex;
+        width: 358px;
+        height: 50px;
+        margin-right: 12px; 
+        padding-left: 16px;
+        padding-top: 12px;
+        padding-bottom: 12px;
+        outline: none;
+       
+        color: var(--herotitle) ;
+        background-color: #2F303A;
+        border: 1px solid #FFFFFF4D;   
+        border-radius: 4px;
+    }
+    
+}
+@media screen and (min-width: 120px) {
+    .subscriber-form {
     position: relative;
     display: flex;
 }
-.form-hidden {
+    .form-hidden {
     position: absolute;
     overflow: hidden;
     margin: 0;
@@ -230,4 +303,5 @@ textarea {
     background-color: #2F303A;
     border: 1px solid #FFFFFF4D;   
     border-radius: 4px;
+}
 }
