--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,17 +3,17 @@
     display: flex;
     margin: 0;
     padding: 0;
-
-    &__title {
-        color: var(--primary-text-color);
-    }
+    
+  &__title {
+    color: var(--primary-text-color);
+} 
 }
 .logo {
     display: block;
 
     padding-top: 25px;
     padding-bottom: 25px;
-    margin-right: 92px;
+  
 
     color: var(--accent-text);
     font-family: 'Raleway';
@@ -21,7 +21,17 @@
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
+
+     @media screen and (min-width: 768px) {
+        margin-right: 88px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-right: 92px;
+    }
 }
+    
+
+    
 
 //footer //
 .logo-footer {
