--- a/sass/layouts/_advanteg.scss
+++ b/sass/layouts/_advanteg.scss
@@ -16,28 +16,83 @@
         font-size: 14px;
         line-height: 1.71;
     }   
-    .advantages-list {
-        display: flex;
-        flex-wrap: nowrap;
-        margin-top: 0px;
-        margin-bottom: 0px; 
-    
-         &__item {
-            width: 270px; 
+    @media screen and (min-width: 480px) {
+        .advantages-list {
+                 
+             &__item {
+                width: 100%; 
+            }
+             &__item:not(:last-child) {
+                    margin-bottom: 30px;
+            }
         }
-         &__item:not(:first-child) {
-                margin-left: 30px;
+    
+        .section-picture {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+            background-color: #F5F4FA;
+            border-radius: 4px;
+            width: 100%;
+            height: 120px;
+            margin-bottom: 30px;
+            padding: 0;
         }
     }
-    .section-picture {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-        background-color: #F5F4FA;
-        border-radius: 4px;
-        width: 100%;
-        height: 120px;
-        margin-bottom: 30px;
-        padding: 0;
+    @media screen and (min-width: 768px) {
+        .advantages-list {
+            display: flex;
+            flex-wrap: wrap;
+            margin: -15px;
+                 
+             &__item {
+                width: calc((100% - 2 * 30px) / 2); 
+                margin: 15px;
+            }
+        }
+       
+        .section-picture {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+            background-color: #F5F4FA;
+            border-radius: 4px;
+            width: 100%;
+            height: 120px;
+            margin-bottom: 30px;
+            padding: 0;
+        }
     }
+    @media screen and (min-width: 1200px) {
+        .advantages-conteiner {
+            width: 1200px;
+        }
+
+        .advantages-list {
+            display: flex;
+            flex-wrap: nowrap;
+                         
+             &__item {
+                width: calc((100% - 4 * 30px) / 4); 
+             }
+             &__item:not(:last-child) {
+                 margin-right: 30px;
+             }
+        }
+   
+        .section-picture {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+            background-color: #F5F4FA;
+            border-radius: 4px;
+            width: 100%;
+            height: 120px;
+            margin-bottom: 30px;
+            padding: 0;
+        }
+    }
+
