--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -6,23 +6,76 @@
   padding-top: 0;
   padding-bottom: 0;
 }
-.team-list {
-    display: flex;
 
-    &__item {
-        margin-top: 0;
-        margin-bottom: 0;
-        margin-right: 30px;
-        align-items: center; 
-        background-color: #FFFFFF; 
-        box-shadow: 0px 4px 4px 0px #00000040;
-        border-radius: 3px;
-        list-style: none;
+@media screen and (min-width: 480px) {
+    .team-list {
+    
+        &__item {
+            width: 100%;
+            align-items: center; 
+            background-color: #FFFFFF; 
+            box-shadow: 0px 4px 4px 0px #00000040;
+            border-radius: 3px;
+            list-style: none;
+        }
+       &__item:not(:last-child) {
+            margin-bottom: 30px;
+        }
     }
-   &__item:last-child {
-        margin-right: 0;
+    .team-list__img {
+        width: 100%;
+        height: 460px;
+        margin: 0;
+        padding: 0;
     }
 }
+@media screen and (min-width: 768px) {
+    .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+
+        &__item {
+            width: calc((100% - 4 * 15px) / 2);
+            margin: 15px;
+            align-items: center; 
+            background-color: #FFFFFF; 
+            box-shadow: 0px 4px 4px 0px #00000040;
+            border-radius: 3px;
+            list-style: none;
+        }
+    }
+    .team-list__img {
+        width: 100%;
+        height: 374px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .team-conteiner {
+        width: 1200px;
+    }
+    .team-list {
+        display: flex;
+        flex-wrap: nowrap;
+    
+        &__item {
+            width: 270px;
+            align-items: center; 
+            background-color: #FFFFFF; 
+            box-shadow: 0px 4px 4px 0px #00000040;
+            border-radius: 3px;
+            list-style: none;
+        }
+       &__item:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
+    .team-list__img {
+        width: 270px;
+        height: 260px;
+    }
+}
+
 
 .team-box {
     padding-top: 30px;
