--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -45,7 +45,8 @@ body {
         display: block;
         max-width: 100%;
         height: auto;
-    }.list {
+    }
+    .list {
         padding: 0;
         margin: 0;
         list-style: none;
