--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -199,7 +199,11 @@ textarea {
 }
 @media screen and (min-width: 480px) {
     .subscriber-form {
-        position: relative;
+        display: flex;
+        position: relative;    
+        text-align: center;
+        flex-direction: column;
+        flex-wrap: wrap;        
     }
     .form-hidden {
         position: absolute;
@@ -218,9 +222,9 @@ textarea {
     }
     .subscriber-email {
         display: flex;
-        width: 358px;
+        width: 100%;
         height: 50px;
-        margin-right: 12px; 
+        margin-bottom: 20px;
         padding-left: 16px;
         padding-top: 12px;
         padding-bottom: 12px;
@@ -236,6 +240,7 @@ textarea {
 @media screen and (min-width: 768px) {
     .subscriber-form {
         position: relative;
+        align-items: center;
     
     }
     .form-hidden {
@@ -254,13 +259,15 @@ textarea {
     }
     .subscriber-email {
         display: flex;
-        width: 358px;
+        max-width: 450px;
         height: 50px;
         margin-right: 12px; 
         padding-left: 16px;
         padding-top: 12px;
         padding-bottom: 12px;
-        outline: none;
+        outline: transparent;
+        cursor: pointer
+        aling-;
        
         color: var(--herotitle) ;
         background-color: #2F303A;
@@ -269,10 +276,11 @@ textarea {
     }
     
 }
-@media screen and (min-width: 120px) {
+@media screen and (min-width: 1200px) {
     .subscriber-form {
     position: relative;
     display: flex;
+    flex-wrap: nowrap;
 }
     .form-hidden {
     position: absolute;
