--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,15 +1,7 @@
 // header//
-.navigation {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    
-  &__title {
-    color: var(--primary-text-color);
-} 
-}
+
 .logo {
-    display: block;
+    display: inline-block;
 
     padding-top: 25px;
     padding-bottom: 25px;
@@ -22,12 +14,18 @@
     line-height: 1.19;
     text-decoration: none;
 
-     @media screen and (min-width: 768px) {
-        margin-right: 88px;
+     @media screen and (max-width: 1199px) {
+        margin-right: 88px;  
+        font-size: 24px;
+        line-height: 1.17;
     }
     @media screen and (min-width: 1200px) {
         margin-right: 92px;
     }
+    
+&__title {
+    color: var(--primary-text-color);
+}
 }
     
 
