--- a/sass/layouts/_advanteg.scss
+++ b/sass/layouts/_advanteg.scss
@@ -43,13 +43,17 @@
     @media screen and (min-width: 768px) {
         .advantages-list {
             display: flex;
-            flex-wrap: wrap;
-            margin: -15px;
+            flex-wrap: wrap;         
                  
              &__item {
-                width: calc((100% - 2 * 30px) / 2); 
-                margin: 15px;
+                width: calc((100% - 2 * 30px) / 2);                
             }
+            &__item:not(:nth-last-child(-n+2)) {
+                margin-bottom: 30px;
+            }
+           &__item:nth-child(odd) {
+                margin-right: 30px;
+            }  
         }
        
         .section-picture {
