--- a/sass/layouts/_partners.scss
+++ b/sass/layouts/_partners.scss
@@ -5,31 +5,32 @@
         display: flex;
         flex-wrap: wrap;
         margin: -15px;
-    }
+    
     &__item {
         width: calc((100% - 4 * 15px) / 2);
         margin: 15px;
     }
+  
+}
 }
 @media screen and (min-width: 768px) {
     .clients-list {
         display: flex;
         flex-wrap: wrap;
-      
-      
-    }
+        margin: -15px;
+   
     &__item {
-        width: calc((100% - 6 * 15px) / 3);
-        margin: 15px;          
+        width: calc((100% - 6 * 15px) / 3); 
+        margin: 15px;                
     }
-    
-
+   
+}
 }
 @media screen and (min-width: 1200px) {
     .clients-list {
         display: flex;
         flex-wrap: nowrap;          
-    }
+   
     &__item {
         width: calc((100% - 6 * 30px) / 6);
      }
@@ -37,19 +38,17 @@
         margin-right: 30px;
     }
 }
-
+}
 
 .clients-list {
-&__item {
-    margin-right: 30px; 
-}
+
 &__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
-    height: 92px;
-    margin: 0;      
+    width: 100%;
+    height: 92px; 
+    margin: 0;   
     border: 1px solid #AFB1B8;
     border-radius: 4px;
 
