--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -22,33 +22,29 @@
             margin-bottom: 30px;
         }
     }
-    .team-list__img {
+   /* .team-list__img {
         width: 100%;
         height: 460px;
         margin: 0;
         padding: 0;
-    }
+    }*/
 }
 @media screen and (min-width: 768px) {
     .team-list {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
     margin: -15px;
 
         &__item {
-            width: calc((100% - 4 * 15px) / 2);
-            margin: 15px;
+            width: calc((100% - 4 * 15px) / 2); 
+            margin: 15px;    
             align-items: center; 
             background-color: #FFFFFF; 
             box-shadow: 0px 4px 4px 0px #00000040;
             border-radius: 3px;
             list-style: none;
         }
-    }
-    .team-list__img {
-        width: 100%;
-        height: 374px;
-    }
+ }
 }
 @media screen and (min-width: 1200px) {
     .team-conteiner {
@@ -66,9 +62,9 @@
             border-radius: 3px;
             list-style: none;
         }
-       &__item:not(:last-child) {
-            margin-right: 30px;
-        }
+      &__item:not(:last-child) {
+        margin-right: 30px;
+      }
     }
     .team-list__img {
         width: 270px;
