--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -281,6 +281,10 @@ textarea {
     position: relative;
     display: flex;
     flex-wrap: nowrap;
+    width: 570px;
+    margin-left: auto;
+    text-align: start;
+
 }
     .form-hidden {
     position: absolute;
