--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -34,7 +34,8 @@
 //footer //
 .logo-footer {
     display: block;
-    padding: 0;   
+    padding: 0;  
+    margin-bottom: 20px; 
 
     color: var(--accent-text);
     font-family: 'Raleway';
