--- a/sass/components/_cosial-icon.scss
+++ b/sass/components/_cosial-icon.scss
@@ -45,10 +45,10 @@
 @media screen and (min-width: 480px) {
     .join {
         display: block;
-        text-align: center;
-        justify-content: center;
-        padding: 0;   
-        margin-bottom: 60px;; 
+        padding: 0;
+        margin-left: 0;
+        margin-right: 93px;
+        width: 206px;
     }
     .join-list {
         display: flex;
