--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -67,21 +67,32 @@
          display: flex;
          justify-content: flex-start;
          align-items: baseline;
-      
-        padding-left: 0;
-         padding-right: 0;
-     }
+         text-align: start;
+         padding-top: 60px;
+         padding-bottom: 60px;
+     
+     }  
+     .mailing-form {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+    }
+
      .mailing-titl {
         text-align: left;
     }
     .box-logo {
         display: block;
         justify-content: flex-start;   
+        text-align: start;
         margin-right: 70px;
-        padding: 0;
- }
+        padding: 0;        
 }
-
+    .footer-text {
+         display: block;
+         text-align: start;
+    }
+}
 
  .adress {   
      margin: 0px 0px 9px 0px;
@@ -115,8 +126,7 @@
 
  .mailing-titl {
      margin-bottom: 20px;
- 
-     color: var(--bgr-color);
+      color: var(--bgr-color);
      font-size: 14px;
      font-weight: 700;
      line-height: 1.14;
