--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -48,13 +48,15 @@
 }
 @media screen and (min-width: 1200px) {
     .team-conteiner {
-        width: 1200px;
+    width: 1200px;
     }
     .team-list {
         display: flex;
         flex-wrap: nowrap;
     
         &__item {
+            margin-top: 0px;
+            margin-bottom: 0px;
             width: 270px;
             align-items: center; 
             background-color: #FFFFFF; 
@@ -71,8 +73,6 @@
         height: 260px;
     }
 }
-
-
 .team-box {
     padding-top: 30px;
     padding-bottom: 30px;
