--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,10 +4,11 @@
         background-color: hsl(235, 10%, 21%); 
      }
      .footer-conteiner {
-       text-align: center;  
-         
+       text-align: center;           
      }
      .box-logo {
+        display: block;
+        justify-content: center;
         text-align: center;      
         padding: 0;
         margin-bottom: 60px;       
@@ -23,12 +24,11 @@
     .footer-text {
         display: block;      
         justify-content: center;   
-        margin: 0;
-        padding: 0;
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
-
-
 
 @media screen and (min-width: 768px) {
     .footer {      
@@ -42,8 +42,7 @@
           }
      .box-logo {
         text-align: center;      
-        padding: 0;
-       
+        padding: 0;       
     }
     .mailing-form {
         justify-content: center;
