--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -22,13 +22,11 @@
         text-align: center;
     }
     .footer-text {
-        display: block;      
-        justify-content: center;   
-        margin-top: 20px;
-        margin-left: auto;
-        margin-right: auto;
+     width: auto;
     }
 }
+
+
 
 @media screen and (min-width: 768px) {
     .footer {      
@@ -49,8 +47,7 @@
         margin-top: 30px;
     }
     .footer-text {
-        display: block;
-       align-self: center;
+       width: auto;
     }    
     .mailing-titl {
         text-align: center;
@@ -87,10 +84,18 @@
         margin-right: 70px;
         padding: 0;        
 }
-    .footer-text {
-         display: block;
-         text-align: start;
-    }
+.footer-text {    
+    width: 231px;   
+}
+}
+.footer-text {
+    display: block;  
+    width: 231px;
+    padding: 0;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    margin-left: 0px; 
+    margin-right: 0px;     
 }
 
  .adress {   
