--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -7,7 +7,7 @@
   padding-bottom: 0;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
     .team-list {
     
         &__item {
@@ -29,7 +29,7 @@
         padding: 0;
     }*/
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
     .team-list {
     display: flex;
     flex-wrap: wrap; 
