footer-style-commit

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -21,11 +21,11 @@
 
 // footer //
 .subscriber-btn {     
-    margin: 0 auto;
+    width: 198px;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding-left: 28px;
+    padding-right: 28px;
     border-radius: 4px;
      
     font-style: normal;
