--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -44,12 +44,6 @@
     line-height: 1.19;
     text-decoration: none;
 }
-.footer-text {
-    display: block;  
-    width: 231px;
-    padding: 0;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    margin-left: 0px; 
-    margin-right: 0px;     
+.title-footer {
+    color: var(--herotitle);
 }
