--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,18 @@ h1, h2, h3, p {
   .site-list {
     display: none;
   }
+  .header-menu__btn {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+  }
+  .header-menu__icon-cross {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -229,6 +241,9 @@ h1, h2, h3, p {
   .site-list__link:focus .site-list__icon {
     fill: var(--accent-text);
   }
+  .header-menu__btn {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -288,6 +303,9 @@ h1, h2, h3, p {
   }
   .site-nav__link:hover, .site-nav__link:focus, .site-nav__link--current {
     color: var(--accent-text);
+  }
+  .site-nav .header-menu__btn {
+    display: none;
   }
   .site-list {
     display: -webkit-box;
@@ -380,6 +398,7 @@ h1, h2, h3, p {
 .logo-footer {
   display: block;
   padding: 0;
+  margin-bottom: 20px;
   color: var(--accent-text);
   font-family: 'Raleway';
   font-weight: 700;
@@ -388,14 +407,8 @@ h1, h2, h3, p {
   text-decoration: none;
 }
 
-.footer-text {
-  display: block;
-  width: 231px;
-  padding: 0;
-  margin-top: 20px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
+.title-footer {
+  color: var(--herotitle);
 }
 
 .baсkdrop {
@@ -739,11 +752,18 @@ textarea:focus {
 @media screen and (min-width: 1200px) {
   .subscriber-form {
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: start;
   }
   .form-hidden {
     position: absolute;
@@ -763,10 +783,11 @@ textarea:focus {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 358px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    width: 350px;
     height: 50px;
-    margin-right: 12px;
-    padding-left: 16px;
     padding-top: 12px;
     padding-bottom: 12px;
     outline: none;
@@ -801,11 +822,11 @@ textarea:focus {
 }
 
 .subscriber-btn {
-  margin: 0 auto;
+  width: 198px;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding-left: 28px;
+  padding-right: 28px;
   border-radius: 4px;
   font-style: normal;
   background-color: var(--accent-text);
@@ -941,12 +962,10 @@ textarea:focus {
 @media screen and (min-width: 480px) {
   .join {
     display: block;
-    text-align: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     padding: 0;
-    margin-bottom: 60px;
+    margin-left: 0;
+    margin-right: 93px;
+    width: 100%;
   }
   .join-list {
     display: -webkit-box;
@@ -1007,14 +1026,12 @@ textarea:focus {
 }
 
 @media screen and (min-width: 768px) {
-  .join {
+  .join .join {
     display: block;
-    text-align: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     padding: 0;
-    margin-bottom: 60px;
+    margin-left: 0;
+    margin-right: 93px;
+    width: 206px;
   }
   .join-list {
     display: -webkit-box;
@@ -1153,6 +1170,7 @@ textarea:focus {
   }
   .footer-conteiner {
     text-align: center;
+    width: 100%;
   }
   .box-logo {
     text-align: center;
@@ -1160,7 +1178,6 @@ textarea:focus {
     margin-bottom: 60px;
   }
   .mailing-form {
-    width: 100%;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -1170,12 +1187,7 @@ textarea:focus {
     text-align: center;
   }
   .footer-text {
-    display: block;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin: 0;
-    padding: 0;
+    width: auto;
   }
 }
 
@@ -1206,10 +1218,7 @@ textarea:focus {
     margin-top: 30px;
   }
   .footer-text {
-    display: block;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    width: auto;
   }
   .mailing-titl {
     text-align: center;
@@ -1224,26 +1233,56 @@ textarea:focus {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
-    padding-left: 0;
-    padding-right: 0;
+    text-align: start;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .mailing-form {
+    display: block;
+    margin-top: 30px;
+    width: 570px;
+    margin-left: auto;
+    text-align: start;
   }
   .mailing-titl {
     text-align: left;
+    margin: 0;
   }
   .box-logo {
     display: block;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
+    text-align: start;
     margin-right: 70px;
     padding: 0;
   }
+  .footer-text {
+    display: block;
+    width: 231px;
+    padding: 0;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+.footer-text {
+  display: block;
+  width: 231px;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .adress {
@@ -1272,10 +1311,6 @@ textarea:focus {
   font-size: 14px;
   line-height: 1.71;
   text-decoration: none;
-}
-
-.title-footer {
-  color: var(--herotitle);
 }
 
 .mailing-titl {
@@ -1531,7 +1566,7 @@ textarea:focus {
   padding-bottom: 0;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .team-list__item {
     width: 100%;
     -webkit-box-align: center;
@@ -1554,7 +1589,7 @@ textarea:focus {
     }*/
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1589,6 +1624,8 @@ textarea:focus {
         flex-wrap: nowrap;
   }
   .team-list__item {
+    margin-top: 0px;
+    margin-bottom: 0px;
     width: 270px;
     -webkit-box-align: center;
         -ms-flex-align: center;
