--- a/sass/components/_cosial-icon.scss
+++ b/sass/components/_cosial-icon.scss
@@ -48,7 +48,7 @@
         padding: 0;
         margin-left: 0;
         margin-right: 93px;
-        width: 206px;
+        width: 100%;
     }
     .join-list {
         display: flex;
@@ -97,12 +97,14 @@
 
 @media screen and (min-width: 768px) {
     .join {
-        display: block;
-        text-align: center;
-        justify-content: center;
-        padding: 0;   
-        margin-bottom: 60px;
-          
+        .join {
+            display: block;
+            padding: 0;   
+            margin-left: 0;
+            margin-right: 93px;  
+            width: 206px; 
+        }
+    
       
           }
           .join-list {
