--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,17 +4,16 @@
         background-color: hsl(235, 10%, 21%); 
      }
      .footer-conteiner {
-       text-align: center;           
+       text-align: center;
+       width: 100%;           
      }
-     .box-logo {
-        display: block;
-        justify-content: center;
+     .box-logo {   
         text-align: center;      
         padding: 0;
         margin-bottom: 60px;       
     }
     .mailing-form {
-        width: 100%;
+      
         justify-content: center;  
         margin-top: 60px;
     }
@@ -39,6 +38,7 @@
          flex-wrap: wrap;
           }
      .box-logo {
+        
         text-align: center;      
         padding: 0;       
     }
@@ -61,7 +61,8 @@
      }
      .footer-conteiner {
          display: flex;
-         justify-content: flex-start;
+         justify-content: space-around;
+         flex-wrap: nowrap;
          align-items: baseline;
          text-align: start;
          padding-top: 60px;
@@ -69,13 +70,16 @@
      
      }  
      .mailing-form {
-        display: flex;
-        justify-content: center;
+        display: block;      
         margin-top: 30px;
+        width: 570px;
+        margin-left: auto;
+        text-align: start
     }
 
      .mailing-titl {
         text-align: left;
+        margin: 0;
     }
     .box-logo {
         display: block;
@@ -84,8 +88,14 @@
         margin-right: 70px;
         padding: 0;        
 }
-.footer-text {    
-    width: 231px;   
+.footer-text {
+    display: block;  
+    width: 231px;
+    padding: 0;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    margin-left: 0px; 
+    margin-right: 0px;     
 }
 }
 .footer-text {
@@ -124,9 +134,7 @@
      line-height: 1.71;
      text-decoration: none;
  }
- .title-footer {
-     color: var(--herotitle);
- }
+
 
  .mailing-titl {
      margin-bottom: 20px;
