--- a/sass/layouts/_do.scss
+++ b/sass/layouts/_do.scss
@@ -1,12 +1,12 @@
  /*DO*/
  @media screen and (min-width: 480px) {
-    .section.no-padding {
+    .do {
       display: none;
         }
  }
 
  @media screen and (min-width: 768px) {
-    .section.no-padding {
+    .do {
        display: none;
     }
  }
