--- a/css/main.css
+++ b/css/main.css
@@ -109,16 +109,100 @@ h1, h2, h3, p {
 }
 
 @media screen and (min-width: 480px) {
+  body.modal-open {
+    overflow: hidden;
+  }
+  .page-header {
+    position: relative;
+  }
+  .main-div {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
   .site-nav {
-    display: none;
+    display: block;
+    margin-bottom: 300px;
+    text-align: start;
+  }
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .site-nav__link {
+    color: var(--primary-text-color);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
   }
   .site-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 65px;
+    text-align: start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .site-list__item:not(:last-child) {
+    margin-top: 32px;
+  }
+  .site-list__link-mail {
+    color: var(--primary-text-color);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+  }
+  .site-list__link-tell {
+    color: var(--accent-text);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+  }
+  .site-list__icon {
     display: none;
+  }
+  .site-social {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .site-social__item {
+    padding-right: 10px;
+    border-right: 1px solid rgba;
   }
   .header-menu__btn {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
+    cursor: pointer;
     margin: 0;
     padding: 0;
     border: none;
@@ -127,13 +211,39 @@ h1, h2, h3, p {
   .header-menu__icon-cross {
     display: none;
   }
+  .header-menu__btn.is-open .header-menu__icon-cross {
+    display: block;
+    z-index: 2;
+  }
+  .header-menu__btn.is-open .header-menu__icon-menu {
+    display: none;
+  }
+  .header-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #ffff;
+    padding: 20px 20px;
+    text-align: center;
+    font-size: 20px;
+    z-index: 1;
+  }
+  .header-menu.is-open {
+    display: block;
+    top: 0;
+  }
+  .header-menu__modal {
+    padding: 48px 40px;
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .main-div {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -209,13 +319,15 @@ h1, h2, h3, p {
   .site-list__item:not(:last-child) {
     margin-bottom: 10px;
   }
-  .site-list__link {
+  .site-list__link-mail, .site-list__link-tell {
     display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
     color: var(--primary-text-color);
     font-family: inherit;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 1.16;
+    font-size: 14px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
     -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -223,10 +335,13 @@ h1, h2, h3, p {
     -webkit-transition-duration: 250ms;
             transition-duration: 250ms;
   }
-  .site-list__link {
+  .site-list__link-mail, .site-list__link-tell {
     color: var(--text-color);
   }
-  .site-list__link:hover, .site-list__link:focus {
+  .site-list__link-mail:hover, .site-list__link-mail:focus {
+    color: var(--accent-text);
+  }
+  .site-list__link-tell:hover, .site-list__link-tell:focus {
     color: var(--accent-text);
   }
   .site-list__icon {
@@ -237,11 +352,18 @@ h1, h2, h3, p {
     -webkit-transition-duration: 250ms;
             transition-duration: 250ms;
   }
-  .site-list__link:hover .site-list__icon,
-  .site-list__link:focus .site-list__icon {
+  .site-list__link-mail:hover .site-list__icon,
+  .site-list__link-mail:focus .site-list__icon {
+    fill: var(--accent-text);
+  }
+  .site-list__link-tell:hover .site-list__icon,
+  .site-list__link-tell:focus .site-list__icon {
     fill: var(--accent-text);
   }
   .header-menu__btn {
+    display: none;
+  }
+  .header-menu {
     display: none;
   }
 }
@@ -254,6 +376,7 @@ h1, h2, h3, p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    padding: 0;
     width: 1200px;
   }
   .navigation {
@@ -285,6 +408,9 @@ h1, h2, h3, p {
   .site-nav__item:not(:last-child) {
     margin-right: 50px;
   }
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 0;
+  }
   .site-nav__link {
     display: block;
     padding-top: 32px;
@@ -307,6 +433,9 @@ h1, h2, h3, p {
   .site-nav .header-menu__btn {
     display: none;
   }
+  .site-nav .header-menu {
+    display: none;
+  }
   .site-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -322,14 +451,16 @@ h1, h2, h3, p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-bottom: 0;
   }
-  .site-list__link {
+  .site-list__link-mail, .site-list__link-tell {
     position: relative;
+    margin-bottom: 0;
   }
   .site-list__item:not(:last-child) {
     margin-right: 50px;
   }
-  .site-list__link {
+  .site-list__link-mail, .site-list__link-tell {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -345,10 +476,13 @@ h1, h2, h3, p {
     -webkit-transition-duration: 250ms;
             transition-duration: 250ms;
   }
-  .site-list__link {
+  .site-list__link-mail, .site-list__link-tell {
     color: var(--text-color);
   }
-  .site-list__link:hover, .site-list__link:focus {
+  .site-list__link-mail:hover, .site-list__link-mail:focus {
+    color: var(--accent-text);
+  }
+  .site-list__link-tell:hover, .site-list__link-tell:focus {
     color: var(--accent-text);
   }
   .site-list__icon {
@@ -359,8 +493,12 @@ h1, h2, h3, p {
     -webkit-transition-duration: 250ms;
             transition-duration: 250ms;
   }
-  .site-list__link:hover .site-list__icon,
-  .site-list__link:focus .site-list__icon {
+  .site-list__link-mail:hover .site-list__icon,
+  .site-list__link-mail:focus .site-list__icon {
+    fill: var(--accent-text);
+  }
+  .site-list__link-tell:hover .site-list__icon,
+  .site-list__link-tell:focus .site-list__icon {
     fill: var(--accent-text);
   }
 }
@@ -424,6 +562,36 @@ h1, h2, h3, p {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+}
+
+.header-menu__baсkdrop {
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 50px 30px;
+  overflow-y: scroll;
+  background-color: rgba(47, 48, 58, 0.4);
+  z-index: 10;
+}
+
+.header-menu__baсkdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.header-menu__modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 480px;
+  background-color: var(--bgr-color);
+  text-align: center;
 }
 
 /*Модальное окно + ФОРМА*/
@@ -670,12 +838,11 @@ textarea:focus {
     display: flex;
     position: relative;
     text-align: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .form-hidden {
     position: absolute;
@@ -711,10 +878,22 @@ textarea:focus {
 
 @media screen and (min-width: 768px) {
   .subscriber-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     position: relative;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .form-hidden {
     position: absolute;
@@ -734,14 +913,15 @@ textarea:focus {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    max-width: 450px;
+    width: 450px;
     height: 50px;
     margin-right: 12px;
+    margin-bottom: 20px;
     padding-left: 16px;
     padding-top: 12px;
     padding-bottom: 12px;
     outline: transparent;
-    cursor: pointer aling-;
+    cursor: pointer;
     color: var(--herotitle);
     background-color: #2F303A;
     border: 1px solid #FFFFFF4D;
@@ -757,10 +937,10 @@ textarea:focus {
     display: inline-flex;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     margin: 0;
     padding: 0;
     text-align: start;
@@ -790,6 +970,7 @@ textarea:focus {
     height: 50px;
     padding-top: 12px;
     padding-bottom: 12px;
+    margin-bottom: 0;
     outline: none;
     color: var(--herotitle);
     background-color: #2F303A;
@@ -828,6 +1009,9 @@ textarea:focus {
   padding-left: 28px;
   padding-right: 28px;
   border-radius: 4px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-style: normal;
   background-color: var(--accent-text);
   color: var(--herotitle);
@@ -964,7 +1148,6 @@ textarea:focus {
     display: block;
     padding: 0;
     margin-left: 0;
-    margin-right: 93px;
     width: 100%;
   }
   .join-list {
@@ -1030,7 +1213,7 @@ textarea:focus {
     display: block;
     padding: 0;
     margin-left: 0;
-    margin-right: 93px;
+    margin-left: 165px;
     width: 206px;
   }
   .join-list {
@@ -1167,6 +1350,7 @@ textarea:focus {
 @media screen and (min-width: 480px) {
   .footer {
     background-color: #30313b;
+    display: block;
   }
   .footer-conteiner {
     text-align: center;
@@ -1194,6 +1378,7 @@ textarea:focus {
 @media screen and (min-width: 768px) {
   .footer {
     background-color: #2F303A;
+    display: block;
   }
   .footer-conteiner {
     display: -webkit-box;
@@ -1215,7 +1400,7 @@ textarea:focus {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-top: 30px;
+    margin-top: 60px;
   }
   .footer-text {
     width: auto;
@@ -1228,8 +1413,10 @@ textarea:focus {
 @media screen and (min-width: 1200px) {
   .footer {
     background-color: #2F303A;
+    display: block;
   }
   .footer-conteiner {
+    width: 1200px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1245,11 +1432,12 @@ textarea:focus {
     padding-bottom: 60px;
   }
   .mailing-form {
-    display: block;
     margin-top: 30px;
     width: 570px;
     margin-left: auto;
-    text-align: start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   .mailing-titl {
     text-align: left;
@@ -1265,19 +1453,12 @@ textarea:focus {
     padding: 0;
   }
   .footer-text {
-    display: block;
     width: 231px;
-    padding: 0;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
   }
 }
 
 .footer-text {
   display: block;
-  width: 231px;
   padding: 0;
   margin-top: 20px;
   margin-bottom: 0px;
@@ -1497,13 +1678,13 @@ textarea:focus {
 
 /*DO*/
 @media screen and (min-width: 480px) {
-  .section.no-padding {
+  .do {
     display: none;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .section.no-padding {
+  .do {
     display: none;
   }
 }
