--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -20,13 +20,15 @@
 }
 
 // footer //
-.subscriber-btn {     
+.subscriber-btn { 
+  
     width: 198px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 28px;
     padding-right: 28px;
     border-radius: 4px;
+    justify-content: center;
      
     font-style: normal;
     background-color: var(--accent-text);
