--- a/sass/components/_cosial-icon.scss
+++ b/sass/components/_cosial-icon.scss
@@ -47,7 +47,7 @@
         display: block;
         padding: 0;
         margin-left: 0;
-        margin-right: 93px;
+       
         width: 100%;
     }
     .join-list {
@@ -101,8 +101,8 @@
             display: block;
             padding: 0;   
             margin-left: 0;
-            margin-right: 93px;  
-            width: 206px; 
+            margin-left: 165px;  
+            width: 206px;         
         }
     
       
