--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -202,8 +202,10 @@ textarea {
         display: flex;
         position: relative;    
         text-align: center;
-        flex-direction: column;
-        flex-wrap: wrap;        
+      
+        flex-wrap: wrap; 
+        justify-content: center;
+
     }
     .form-hidden {
         position: absolute;
@@ -239,9 +241,13 @@ textarea {
 }
 @media screen and (min-width: 768px) {
     .subscriber-form {
-        position: relative;
-        align-items: center;
-    
+        display: flex;
+        position: relative;    
+        align-items: center;    
+        flex-wrap: wrap; 
+        flex-direction: column;
+        justify-content: center;
+
     }
     .form-hidden {
         position: absolute;
@@ -259,15 +265,15 @@ textarea {
     }
     .subscriber-email {        
         display: flex;
-        max-width: 450px;
+        width: 450px;
         height: 50px;
         margin-right: 12px; 
+        margin-bottom: 20px;
         padding-left: 16px;
         padding-top: 12px;
         padding-bottom: 12px;
         outline: transparent;
-        cursor: pointer
-        aling-;
+        cursor: pointer;
        
         color: var(--herotitle) ;
         background-color: #2F303A;
@@ -281,8 +287,7 @@ textarea {
     position: relative;
     display: inline-flex;
     flex-wrap: nowrap;
-    justify-content: flex-start;
-   
+       flex-direction: row;
    margin: 0;
    padding: 0;
     text-align: start;
@@ -311,6 +316,7 @@ textarea {
    
     padding-top: 12px;
     padding-bottom: 12px;
+    margin-bottom: 0;
     outline: none;
    
     color: var(--herotitle) ;
