--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,4 +13,35 @@
     visibility: hidden;
 }
 
-// FOOTER //
+// HEDER //
+
+/*.header-menu {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;  
+    padding: 50px 30px;
+    overflow-y: scroll;
+    background-color: rgba(47, 48, 58, 0.4);
+    z-index: 10;
+}
+.header-menu.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+.header-menu__modal  {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    width: 480px;
+    
+
+    background-color: var(--bgr-color);
+    text-align: center;   
+
+}*/
