--- a/sass/components/_cosial-icon.scss
+++ b/sass/components/_cosial-icon.scss
@@ -111,6 +111,7 @@
             display: flex;
             justify-items: center;
             align-items: center;
+            width: 206;
          
             &__item {
                 margin-right: 10px;
