--- a/css/main.css
+++ b/css/main.css
@@ -109,13 +109,8 @@ h1, h2, h3, p {
 }
 
 @media screen and (min-width: 480px) {
-  body.modal-open {
-    overflow: hidden;
-  }
-  .page-header {
-    position: relative;
-  }
   .main-div {
+    position: relative;
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -124,6 +119,7 @@ h1, h2, h3, p {
             align-items: center;
     -ms-flex-pack: distribute;
         justify-content: space-around;
+    width: 100%;
   }
   .site-nav {
     display: block;
@@ -145,6 +141,9 @@ h1, h2, h3, p {
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     -webkit-transition-duration: 250ms;
             transition-duration: 250ms;
+  }
+  .site-nav__link:current {
+    color: var(--accent-text);
   }
   .site-list {
     display: -webkit-box;
@@ -196,7 +195,19 @@ h1, h2, h3, p {
   }
   .site-social__item {
     padding-right: 10px;
-    border-right: 1px solid rgba;
+    padding-left: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .site-social__item:last-child {
+    padding-right: 0;
+  }
+  .site-social .site-social__link {
+    color: #2196F3;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    text-align: left;
   }
   .header-menu__btn {
     display: -webkit-inline-box;
@@ -207,7 +218,17 @@ h1, h2, h3, p {
     padding: 0;
     border: none;
     background-color: transparent;
+    z-index: 2;
   }
+}
+
+@media screen and (min-width: 480px) and (min-width: 768px) {
+  .header-menu__btn {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 480px) {
   .header-menu__icon-cross {
     display: none;
   }
@@ -218,47 +239,73 @@ h1, h2, h3, p {
   .header-menu__btn.is-open .header-menu__icon-menu {
     display: none;
   }
+  .header-menu__icon-cross:hover,
+  .header-menu__icon-cross:focus {
+    fill: var(--accent-text);
+  }
   .header-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
     background-color: #ffff;
-    padding: 20px 20px;
+    padding: 48px 40px;
     text-align: center;
     font-size: 20px;
     z-index: 1;
   }
-  .header-menu.is-open {
-    display: block;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .header-menu {
+    display: none;
+    position: absolute;
     top: 0;
-  }
-  .header-menu__modal {
-    padding: 48px 40px;
+    left: 0;
     width: 100%;
   }
 }
 
+@media screen and (min-width: 480px) {
+  .header-menu.is-open {
+    display: block;
+  }
+  /*.header-menu__navigation, 
+    .header-menu__contact {
+        height: 100%;
+    }*/
+}
+
 @media screen and (min-width: 768px) {
   .main-div {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .navigation {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 0;
+    width: 768px;
+  }
+  .header-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 0;
+    margin: 0;
+  }
+  .header-menu__navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-bottom: 0;
   }
   .site-nav__link {
     position: relative;
@@ -276,6 +323,7 @@ h1, h2, h3, p {
   }
   .site-nav__item:not(:last-child) {
     margin-right: 50px;
+    margin-bottom: 0;
   }
   .site-nav__link {
     display: block;
@@ -296,11 +344,18 @@ h1, h2, h3, p {
   .site-nav__link:hover, .site-nav__link:focus, .site-nav__link--current {
     color: var(--accent-text);
   }
+  .header-menu__contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
   .site-list {
     display: block;
     margin-left: auto;
     list-style: none;
     margin-left: auto;
+    margin-bottom: 0;
+    margin-left: 84px;
   }
   .site-list__item {
     position: relative;
@@ -318,11 +373,12 @@ h1, h2, h3, p {
   }
   .site-list__item:not(:last-child) {
     margin-bottom: 10px;
+    margin-top: 0;
   }
   .site-list__link-mail, .site-list__link-tell {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     color: var(--primary-text-color);
     font-family: inherit;
     font-weight: 500;
@@ -345,6 +401,7 @@ h1, h2, h3, p {
     color: var(--accent-text);
   }
   .site-list__icon {
+    display: block;
     fill: var(--text-color);
     margin-right: 10px;
     -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -360,10 +417,10 @@ h1, h2, h3, p {
   .site-list__link-tell:focus .site-list__icon {
     fill: var(--accent-text);
   }
-  .header-menu__btn {
+  .site-social {
     display: none;
   }
-  .header-menu {
+  .header-menu.is-open {
     display: none;
   }
 }
@@ -379,17 +436,28 @@ h1, h2, h3, p {
     padding: 0;
     width: 1200px;
   }
-  .navigation {
+  .header-menu {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     padding: 0;
+    margin: 0;
+  }
+  .header-menu__navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-bottom: 0;
   }
   .site-nav__link {
     position: relative;
@@ -407,8 +475,6 @@ h1, h2, h3, p {
   }
   .site-nav__item:not(:last-child) {
     margin-right: 50px;
-  }
-  .site-nav__item:not(:last-child) {
     margin-bottom: 0;
   }
   .site-nav__link {
@@ -430,18 +496,28 @@ h1, h2, h3, p {
   .site-nav__link:hover, .site-nav__link:focus, .site-nav__link--current {
     color: var(--accent-text);
   }
-  .site-nav .header-menu__btn {
-    display: none;
-  }
-  .site-nav .header-menu {
-    display: none;
+  .header-menu__contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
   }
   .site-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     margin-left: auto;
     list-style: none;
+    -webkit-box-pack: baseline;
+        -ms-flex-pack: baseline;
+            justify-content: baseline;
+    margin-left: 305px;
   }
   .site-list__item {
     position: relative;
@@ -459,11 +535,12 @@ h1, h2, h3, p {
   }
   .site-list__item:not(:last-child) {
     margin-right: 50px;
+    margin-bottom: 0;
   }
   .site-list__link-mail, .site-list__link-tell {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     color: var(--primary-text-color);
     font-family: inherit;
     font-weight: 500;
@@ -486,6 +563,7 @@ h1, h2, h3, p {
     color: var(--accent-text);
   }
   .site-list__icon {
+    display: block;
     fill: var(--text-color);
     margin-right: 10px;
     -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -500,6 +578,9 @@ h1, h2, h3, p {
   .site-list__link-tell:hover .site-list__icon,
   .site-list__link-tell:focus .site-list__icon {
     fill: var(--accent-text);
+  }
+  .site-list .site-social {
+    display: none;
   }
 }
 
@@ -564,36 +645,36 @@ h1, h2, h3, p {
   visibility: hidden;
 }
 
-.header-menu__baсkdrop {
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 50px 30px;
-  overflow-y: scroll;
-  background-color: rgba(47, 48, 58, 0.4);
-  z-index: 10;
+/*.header-menu {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;  
+    padding: 50px 30px;
+    overflow-y: scroll;
+    background-color: rgba(47, 48, 58, 0.4);
+    z-index: 10;
 }
-
-.header-menu__baсkdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
+.header-menu.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
 }
+.header-menu__modal  {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    width: 480px;
+    
 
-.header-menu__modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 480px;
-  background-color: var(--bgr-color);
-  text-align: center;
-}
+    background-color: var(--bgr-color);
+    text-align: center;   
 
+}*/
 /*Модальное окно + ФОРМА*/
 .modal {
   position: absolute;
@@ -1224,6 +1305,7 @@ textarea:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    width: 206;
   }
   .join-list__item {
     margin-right: 10px;
