--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,4 +1,14 @@
 /*Footer*/
+
+@media screen and (min-width: 340px) {
+    .footer {
+           display: none;
+ 
+     }
+
+}
+
+
 @media screen and (min-width: 480px) {
     .footer {
         background-color: hsl(235, 10%, 21%); 
