--- a/sass/layouts/_do.scss
+++ b/sass/layouts/_do.scss
@@ -1,4 +1,9 @@
  /*DO*/
+ @media screen and (min-width: 340px) {
+    .do {
+      display: none;
+        }
+ }
  @media screen and (min-width: 480px) {
     .do {
       display: none;
