--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,13 @@ body {
   letter-spacing: 0.03em;
 }
 
+@media screen and (min-width: 340px) {
+  .section {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .section {
     padding-top: 60px;
@@ -106,6 +113,166 @@ h1, h2, h3, p {
 /*header*/
 .page-header {
   border-bottom: 1px solid #ECECEC;
+}
+
+@media screen and (min-width: 340px) {
+  .main-div {
+    position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+  }
+  .site-nav {
+    display: block;
+    margin-bottom: 300px;
+    text-align: start;
+  }
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .site-nav__link {
+    color: var(--primary-text-color);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+  }
+  .site-nav__link--current {
+    color: var(--accent-text);
+  }
+  .site-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 65px;
+    text-align: start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .site-list__item:not(:last-child) {
+    margin-top: 32px;
+  }
+  .site-list__link-mail {
+    color: var(--primary-text-color);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+  }
+  .site-list__link-tell {
+    color: var(--accent-text);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+  }
+  .site-list__icon {
+    display: none;
+  }
+  .site-social {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .site-social__item {
+    padding-right: 10px;
+    padding-left: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .site-social__item:last-child {
+    padding-right: 0;
+  }
+  .site-social .site-social__link {
+    color: #2196F3;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    text-align: left;
+  }
+  .header-menu__btn {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    z-index: 2;
+  }
+}
+
+@media screen and (min-width: 340px) and (min-width: 768px) {
+  .header-menu__btn {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 340px) {
+  .header-menu__icon-cross {
+    display: none;
+  }
+  .header-menu__btn.is-open .header-menu__icon-cross {
+    display: block;
+    z-index: 2;
+  }
+  .header-menu__btn.is-open .header-menu__icon-menu {
+    display: none;
+  }
+  .header-menu__btn:hover,
+  .header-menu__btn:focus {
+    fill: var(--accent-text);
+  }
+  .header-menu {
+    background-color: #ffff;
+    padding: 48px 40px;
+    text-align: center;
+    font-size: 20px;
+    z-index: 1;
+  }
+}
+
+@media screen and (min-width: 340px) and (max-width: 767px) {
+  .header-menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 340px) {
+  .header-menu.is-open {
+    display: block;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -912,6 +1079,51 @@ textarea:focus {
   margin-left: 10px;
 }
 
+@media screen and (min-width: 340px) {
+  .subscriber-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    text-align: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .form-hidden {
+    position: absolute;
+    overflow: hidden;
+    margin: 0;
+    padding: 0px;
+    width: 1px;
+    height: 1px;
+    color: #FFFFFF99;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.21;
+    letter-spacing: 0.03em;
+    text-align: left;
+  }
+  .subscriber-email {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 20px;
+    padding-left: 16px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    outline: none;
+    color: var(--herotitle);
+    background-color: #2F303A;
+    border: 1px solid #FFFFFF4D;
+    border-radius: 4px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .subscriber-form {
     display: -webkit-box;
@@ -1110,6 +1322,29 @@ textarea:focus {
 }
 
 /*Filter button*/
+@media screen and (min-width: 340px) {
+  .filter-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 38px;
+    padding: 0;
+  }
+  .filter-list__item {
+    margin-bottom: 12px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .filter-list {
     display: -webkit-box;
@@ -1274,6 +1509,71 @@ textarea:focus {
 
 .cosial-list__link:hover .cosial-list__icon, .cosial-list__link:focus .cosial-list__icon {
   fill: #FFFFFF;
+}
+
+@media screen and (min-width: 340px) {
+  .join {
+    display: block;
+    padding: 0;
+    margin-left: 0;
+    width: 100%;
+  }
+  .join-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .join-list__item {
+    margin-right: 10px;
+  }
+  .join-list__item:last-child {
+    margin-right: 0px;
+  }
+  .join-list__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 0;
+    margin: 0;
+    width: 44px;
+    height: 44px;
+    background-color: #FFFFFF1A;
+    border-radius: 50%;
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+  }
+  .join-list__link:hover, .join-list__link:focus {
+    background-color: var(--accent-text);
+  }
+  .join-list__icon {
+    fill: #FFFFFF;
+    padding: 0;
+    -webkit-transition-property: fill;
+    transition-property: fill;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+  }
+  .join-list__icon:hover, .join-list__icon:focus {
+    fill: #FFFFFF;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -1491,6 +1791,12 @@ textarea:focus {
 }
 
 /*Footer*/
+@media screen and (min-width: 340px) {
+  .footer {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .footer {
     background-color: #30313b;
@@ -1648,26 +1954,9 @@ textarea:focus {
 }
 
 /*Hero*/
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    max-width: 100%;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/images1/hero/hero2.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/images1/hero/hero2.jpg);
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .hero {
-    max-width: 100%;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/images1/hero/hero.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/images1/hero/hero.jpg);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/images1/hero/hero.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/images1/hero/hero.jpg);
+    background-image: url("/images/images1/hero/hero2.jpg");
   }
 }
 
@@ -1678,8 +1967,8 @@ textarea:focus {
   padding-top: 200px;
   padding-bottom: 200px;
   max-width: 1600px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/images1/hero/hero2.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/images1/hero/hero2.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/images1/hero/hero.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/images1/hero/hero.jpg");
   background-color: var(--bgr-color);
   background-repeat: no-repeat;
   background-position: center;
@@ -1743,6 +2032,32 @@ textarea:focus {
   color: var(--text-color);
   font-size: 14px;
   line-height: 1.71;
+}
+
+@media screen and (min-width: 340px) {
+  .advantages-list__item {
+    width: 100%;
+  }
+  .advantages-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .section-picture {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #F5F4FA;
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    margin-bottom: 30px;
+    padding: 0;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -1844,6 +2159,12 @@ textarea:focus {
 }
 
 /*DO*/
+@media screen and (min-width: 340px) {
+  .do {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .do {
     display: none;
@@ -1929,6 +2250,10 @@ textarea:focus {
   .team-list__item:not(:last-child) {
     margin-bottom: 30px;
   }
+  .team-list .team-list__img {
+    width: 100%;
+    height: 460px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -1951,6 +2276,10 @@ textarea:focus {
             box-shadow: 0px 4px 4px 0px #00000040;
     border-radius: 3px;
     list-style: none;
+  }
+  .team-list .team-list__img {
+    width: 100%;
+    height: 374px;
   }
 }
 
@@ -2012,6 +2341,21 @@ textarea:focus {
 }
 
 /*Partners*/
+@media screen and (min-width: 340px) {
+  .clients-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+  .clients-list__item {
+    width: 100%;
+    margin: 15px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .clients-list {
     display: -webkit-box;
@@ -2098,6 +2442,34 @@ textarea:focus {
 }
 
 /*Progect*/
+@media screen and (min-width: 340px) and (max-width: 479px) {
+  .project-list {
+    display: block;
+    margin: 0;
+  }
+  .project-list_item {
+    width: 100%;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-bottom: 30px;
+  }
+  .project-list__item:last-child {
+    margin-bottom: 0;
+  }
+  .project-list_item:hover .poster-text-hover {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  .action-icon {
+    width: 100%;
+    height: 295px;
+  }
+  .bloc {
+    width: 100%;
+  }
+}
+
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .project-list {
     display: block;
@@ -2112,6 +2484,10 @@ textarea:focus {
   }
   .project-list__item:last-child {
     margin-bottom: 0;
+  }
+  .project-list_item:hover .poster-text-hover {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
   }
   .action-icon {
     width: 100%;
@@ -2145,6 +2521,10 @@ textarea:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .project-list_item:hover .poster-text-hover {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
   }
   .action-icon {
     width: 100%;
