--- a/sass/components/_cosial-icon.scss
+++ b/sass/components/_cosial-icon.scss
@@ -42,6 +42,61 @@
 }
 
 // footer //
+
+@media screen and (min-width: 340px) {
+    .join {
+        display: block;
+        padding: 0;
+        margin-left: 0;
+       
+        width: 100%;
+    }
+    .join-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+     
+        &__item {
+            margin-right: 10px;
+        }
+        &__item:last-child {
+            margin-right: 0px;
+        }
+        &__link {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+            margin: 0;   
+            width: 44px;
+            height: 44px;
+            background-color: #FFFFFF1A;
+        
+            border-radius: 50%;  
+            
+            transition-property: background-color;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 250ms;
+        }
+        &__link:hover, &__link:focus {
+            background-color: var(--accent-text);   
+        }
+        &__icon {
+            fill:  #FFFFFF;
+            padding: 0;
+        
+            transition-property: fill;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 250ms;
+        }
+        &__icon:hover, &__icon:focus {
+            fill: #FFFFFF;   
+        }
+    }
+}
+
+
+
 @media screen and (min-width: 480px) {
     .join {
         display: block;
