--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -197,6 +197,48 @@ textarea {
 .send-icon {
     margin-left: 10px;
 }
+@media screen and (min-width: 340px) {
+    .subscriber-form {
+        display: flex;
+        position: relative;    
+        text-align: center;
+      
+        flex-wrap: wrap; 
+        justify-content: center;
+
+    }
+    .form-hidden {
+        position: absolute;
+        overflow: hidden;
+        margin: 0;
+        padding: 0px;
+        width: 1px;
+        height: 1px;
+        
+        color: #FFFFFF99;    
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.21;
+        letter-spacing: 0.03em;
+        text-align: left;
+    }
+    .subscriber-email {
+        display: flex;
+        width: 100%;
+        height: 50px;
+        margin-bottom: 20px;
+        padding-left: 16px;
+        padding-top: 12px;
+        padding-bottom: 12px;
+        outline: none;
+       
+        color: var(--herotitle) ;
+        background-color: #2F303A;
+        border: 1px solid #FFFFFF4D;   
+        border-radius: 4px;
+    }
+    
+}
 @media screen and (min-width: 480px) {
     .subscriber-form {
         display: flex;
