--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,6 +3,145 @@
 .page-header {
     border-bottom: 1px solid #ECECEC ;
 }
+@media screen and (min-width: 340px) {
+    .main-div {  
+        position: relative; 
+        display: inline-flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .site-nav  {
+        display: block; 
+        margin-bottom: 300px; 
+       text-align: start;
+       
+       &__item:not(:last-child) {
+        margin-bottom: 32px;
+    }
+        &__link {
+            color: var(--primary-text-color);
+            font-family: inherit;  
+            font-weight: 500;
+            font-size: 40px;
+            line-height: 1.175;
+            letter-spacing: 0.02em;
+            text-decoration: none;         
+
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 250ms;
+        }
+         &__link--current {
+            color: var(--accent-text);
+        }
+}
+    .site-list  {
+        display: flex;
+        margin-bottom: 65px;
+        text-align: start;
+        flex-direction: column-reverse;
+
+        &__item:not(:last-child) {
+            margin-top: 32px;         
+        }
+            &__link-mail {
+                color: var(--primary-text-color);
+                font-family: inherit;  
+                font-weight: 500;
+                font-size: 40px;
+                line-height: 1.175;
+                letter-spacing: 0.02em;
+                text-decoration: none;         
+    
+                transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+                transition-duration: 250ms;
+            }
+            &__link-tell {
+                color: var(--accent-text);
+                font-family: inherit;  
+                font-weight: 500;
+                font-size: 34px;
+                line-height: 1.175;
+                letter-spacing: 0.02em;
+                text-decoration: none;
+
+                transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+                transition-duration: 250ms;
+            }                                      
+            &__icon {
+                display: none;
+            }
+    }
+    .site-social {
+        display: flex;
+
+        &__item {
+            padding-right: 10px;
+            padding-left: 10px;
+            border-right: 1px solid rgba(33, 33, 33, 0.2);
+        }
+        &__item:last-child {
+            padding-right: 0;            
+        }
+        .site-social__link {
+            color: #2196F3;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 1.22;
+            letter-spacing: 0.02em;
+            text-align: left;
+        }
+        
+    }
+    .header-menu__btn {        
+        display: inline-flex;
+        cursor: pointer;     
+        margin: 0;
+        padding: 0;
+        border: none;
+        background-color: transparent; 
+        z-index: 2; 
+
+        @media screen and (min-width: 768px) {
+            display: none;
+        }
+        
+    }
+    .header-menu__icon-cross {
+        display: none;
+    }
+    .header-menu__btn.is-open .header-menu__icon-cross {
+        display: block;
+        z-index: 2;
+    } 
+    .header-menu__btn.is-open .header-menu__icon-menu {
+        display: none;
+    }
+    .header-menu__btn:hover,
+    .header-menu__btn:focus {
+        fill: var(--accent-text)
+    }
+    .header-menu {               
+        background-color: #ffff;
+        padding: 48px 40px;
+        text-align: center;
+        font-size: 20px;
+        z-index: 1;
+       
+ @media screen and (max-width: 767px) {
+            display: none;
+            position: absolute;         
+            top: 0;
+            left: 0;
+            width: 100%;
+        
+      }
+    }
+    .header-menu.is-open {
+        display: block;   
+    }
+}
 
 @media screen and (min-width: 480px) {
 
