--- a/sass/layouts/_advanteg.scss
+++ b/sass/layouts/_advanteg.scss
@@ -16,6 +16,31 @@
         font-size: 14px;
         line-height: 1.71;
     }   
+    @media screen and (min-width: 340px) {
+        .advantages-list {
+        
+                 
+             &__item {
+                width: 100%; 
+            }
+             &__item:not(:last-child) {
+                    margin-bottom: 30px;
+            }
+        }
+    
+        .section-picture {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+            background-color: #F5F4FA;
+            border-radius: 4px;
+            width: 100%;
+            height: 120px;
+            margin-bottom: 30px;
+            padding: 0;
+        }
+    }
     @media screen and (min-width: 480px) {
         .advantages-list {
                  
