--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,30 +1,14 @@
 
         /*Hero*/
-        @media screen and (min-width: 480px) and (max-width: 767px)  {
-            .hero {
-                max-width: 100%;
-                background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-                url(/images/images1/hero/hero2.jpg);
-            }
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        .hero {
+          background-image: url('/images/images1/hero/hero2.jpg');
         }
-
-
-        @media screen and (min-width: 768px) and (max-width: 1199px)  {
-            .hero {
-                max-width: 100%;
-                background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-                url(/images/images1/hero/hero.jpg);
-            }
-        }
-
-
-        @media screen and (min-width: 1200px) {
-            .hero {
-            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(/images/images1/hero/hero.jpg);
-            }
-        }
-
+      }
+        
         .hero {            
             position: relative;          
             margin-left: auto;
@@ -33,7 +17,7 @@
             padding-bottom: 200px;   
             max-width: 1600px;
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(/images/images1/hero/hero2.jpg);
+            url('/images/images1/hero/hero.jpg');
             background-color: var(--bgr-color);        
             background-repeat: no-repeat;
             background-position: center;
