--- a/sass/layouts/_partners.scss
+++ b/sass/layouts/_partners.scss
@@ -1,4 +1,16 @@
 /*Partners*/
+@media screen and (min-width: 340px) {
+    .clients-list {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    
+    &__item {
+        width: 100%;
+        margin: 15px;
+    }  
+}
+}
 
 @media screen and (min-width: 480px) {
     .clients-list {
@@ -10,7 +22,6 @@
         width: calc((100% - 4 * 15px) / 2);
         margin: 15px;
     }
-  
 }
 }
 @media screen and (min-width: 768px) {
