--- a/sass/layouts/_project.scss
+++ b/sass/layouts/_project.scss
@@ -1,5 +1,32 @@
 
        /*Progect*/
+       @media screen and (min-width: 340px) and (max-width: 479px)  {
+      
+        .project-list {
+         display: block;     
+         margin: 0; 
+ 
+         &_item {   
+         width: 100%;
+         align-self: center;   
+         margin-bottom: 30px;     
+         }
+       &__item:last-child {
+             margin-bottom: 0;
+         }
+         &_item:hover .poster-text-hover {
+             transform: translateY(0%); 
+         }
+     }
+          .action-icon {
+             width: 100%;
+             height: 295px;
+         }
+         .bloc {            
+             width: 100%;
+         }       
+     }
+
 
        @media screen and (min-width: 480px) and (max-width: 767px)  {
       
@@ -14,6 +41,9 @@
         }
       &__item:last-child {
             margin-bottom: 0;
+        }
+        &_item:hover .poster-text-hover {
+            transform: translateY(0%); 
         }
     }
          .action-icon {
@@ -39,7 +69,11 @@
             width: calc((100% - 4 * 15px) / 2); 
             margin: 15px;    
             align-items: center; 
+    } 
+     &_item:hover .poster-text-hover {
+        transform: translateY(0%); 
     }
+
        }
        .action-icon {
         width: 100%;
