--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -21,6 +21,10 @@
        &__item:not(:last-child) {
             margin-bottom: 30px;
         }
+        .team-list__img {
+            width: 100%;
+            height: 460px;
+        }
     }
   
 }
@@ -38,6 +42,10 @@
             box-shadow: 0px 4px 4px 0px #00000040;
             border-radius: 3px;
             list-style: none;
+        }
+        .team-list__img {
+            width: 100%;
+            height: 374px;
         }
  }
 }
