--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,13 +1,30 @@
 // HERO //
 
 /*Модальное окно + ФОРМА*/
+@media screen and (min-width: 340px) and (max-width: 480px) {
+    .modal {
+        width: 340px;
+    }
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+    .modal {
+        width: 450px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .modal {
+        width: 528px;
+    }
+}
+
+
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    
-    width: 528px;
+    transform: translate(-50%, -50%); 
     box-shadow: 0px 4px 4px 0px #00000040;
 
     background-color: var(--bgr-color);
