--- a/sass/components/_cosial-icon.scss
+++ b/sass/components/_cosial-icon.scss
@@ -155,7 +155,7 @@
         display: block;
         padding: 0;   
         margin-left: 0;
-        margin-right: 93px;  
+        margin-right: 0;  
         width: 206px; 
     }
 
