--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
 @media screen and (min-width: 340px) {
   .section {
     padding-top: 40px;
-    padding-bottom: 40px;
+    /*  padding-bottom: 40px;*/
   }
 }
 
@@ -40,7 +40,7 @@ body {
 @media screen and (min-width: 768px) {
   .section {
     padding-top: 60px;
-    padding-bottom: 60px;
+    /* padding-bottom: 60px;*/
   }
 }
 
@@ -53,12 +53,31 @@ body {
 
 .section-title {
   margin-top: 0;
-  margin-bottom: 50px;
   color: var(--primary-text-color);
   font-weight: 700;
-  font-size: 36px;
   line-height: 1.17;
   text-align: center;
+}
+
+@media screen and (min-width: 480px) {
+  .section-title {
+    margin-bottom: 30px;
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .section-title {
+    margin-bottom: 30px;
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
 
 .section-title.centered {
@@ -1400,7 +1419,7 @@ textarea:focus {
             justify-content: center;
     list-style-type: none;
     margin-top: 0;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     padding: 0;
   }
 }
@@ -1418,14 +1437,14 @@ textarea:focus {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 50px;
+    padding: 0;
   }
 }
 
 .filter-list {
-  list-style-type: none;
-  margin-top: 0;
-  margin-bottom: 50px;
-  padding: 0;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-duration: 250ms;
@@ -1663,7 +1682,7 @@ textarea:focus {
     display: block;
     padding: 0;
     margin-left: 0;
-    margin-right: 93px;
+    margin-right: 0;
     width: 206px;
   }
   .join-list {
@@ -1858,9 +1877,12 @@ textarea:focus {
             align-items: baseline;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    padding-left: 64px;
+    padding-right: 101px;
   }
   .box-logo {
-    margin-right: 70px;
+    margin-right: 165px;
+    margin-bottom: 0;
     text-align: center;
     padding: 0;
   }
@@ -1882,6 +1904,7 @@ textarea:focus {
   .footer {
     background-color: #2F303A;
     display: block;
+    padding-bottom: 0;
   }
   .footer-conteiner {
     width: 1200px;
@@ -1982,6 +2005,8 @@ textarea:focus {
   .hero {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/images1/hero/hero1768.jpg");
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images1/hero/hero1768.jpg");
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
 }
 
@@ -1993,14 +2018,18 @@ textarea:focus {
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/images1/hero/hero11200.jpg");
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images1/hero/hero11200.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/images1/hero/imghero11200.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images1/hero/imghero11200.jpg");
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
 }
 
 @media screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../images/images1/hero/hero21200.jpg");
+    background-image: url("../images/images1/hero/imghero21200.jpg");
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 
@@ -2008,9 +2037,9 @@ textarea:focus {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
   max-width: 1600px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/images1/hero/hero1480.jpg");
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images1/hero/hero1480.jpg");
   background-color: var(--bgr-color);
@@ -2105,6 +2134,9 @@ textarea:focus {
 }
 
 @media screen and (min-width: 480px) {
+  .advantages__title {
+    text-align: center;
+  }
   .advantages-list__item {
     width: 100%;
   }
@@ -2131,6 +2163,12 @@ textarea:focus {
 }
 
 @media screen and (min-width: 768px) {
+  .advantages {
+    padding-bottom: 0;
+  }
+  .advantages__title {
+    text-align: start;
+  }
   .advantages-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2167,6 +2205,9 @@ textarea:focus {
 }
 
 @media screen and (min-width: 1200px) {
+  .advantages__title {
+    text-align: start;
+  }
   .advantages-conteiner {
     width: 1200px;
   }
