--- a/sass/layouts/_advanteg.scss
+++ b/sass/layouts/_advanteg.scss
@@ -18,8 +18,7 @@
     }   
     @media screen and (min-width: 340px) {
         .advantages-list {
-        
-                 
+                         
              &__item {
                 width: 100%; 
             }
@@ -42,6 +41,12 @@
         }
     }
     @media screen and (min-width: 480px) {
+               
+        .advantages__title {
+            text-align: center;          
+                        
+        }
+      
         .advantages-list {
                  
              &__item {
@@ -66,6 +71,14 @@
         }
     }
     @media screen and (min-width: 768px) {
+        .advantages {
+            padding-bottom: 0;
+        }
+        .advantages__title {
+            text-align: start;        
+                   
+        }
+
         .advantages-list {
             display: flex;
             flex-wrap: wrap;         
@@ -95,6 +108,10 @@
         }
     }
     @media screen and (min-width: 1200px) {
+        .advantages__title {
+            text-align: start;       
+                   
+        }
         .advantages-conteiner {
             width: 1200px;
         }
