--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -12,6 +12,34 @@
     pointer-events: none;
     visibility: hidden;
 }
+/*Модальное окно + ФОРМА*/
+@media screen and (min-width: 340px) and (max-width: 480px) {
+    .modal {
+        width: 340px;
+    }
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+    .modal {
+        width: 450px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .modal {
+        width: 528px;
+    }
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    box-shadow: 0px 4px 4px 0px #00000040;
+
+    background-color: var(--bgr-color);
+    text-align: center;   
+}
 
 // HEDER //
 
