--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import './components/button';
 @import './components/cosial-icon';
 @import './components/footer';
+@import './components/_menu';
 
 // layouts //
 @import './layouts/hero';
