--- a/css/main.css
+++ b/css/main.css
@@ -291,15 +291,17 @@ h1, h2, h3, p {
 @media screen and (min-width: 340px) {
   .header-menu.is-open {
     display: block;
+    top: 0%;
+    left: 0%;
   }
 }
 
 @media screen and (min-width: 480px) {
   .main-div {
-    position: relative;
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
+    position: relative;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -430,32 +432,20 @@ h1, h2, h3, p {
     fill: var(--accent-text);
   }
   .header-menu {
-    background-color: #ffff;
-    padding: 48px 40px;
     text-align: center;
     font-size: 20px;
     z-index: 1;
-  }
-}
-
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .header-menu {
     display: none;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
   }
-}
-
-@media screen and (min-width: 480px) {
   .header-menu.is-open {
     display: block;
+    top: 0%;
+    left: 0%;
   }
-  /*.header-menu__navigation, 
-    .header-menu__contact {
-        height: 100%;
-    }*/
 }
 
 @media screen and (min-width: 768px) {
@@ -772,6 +762,9 @@ h1, h2, h3, p {
 
 .logo {
   display: inline-block;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding-top: 25px;
   padding-bottom: 25px;
   color: var(--accent-text);
@@ -831,36 +824,6 @@ h1, h2, h3, p {
   visibility: hidden;
 }
 
-/*.header-menu {
-    position: fixed;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;  
-    padding: 50px 30px;
-    overflow-y: scroll;
-    background-color: rgba(47, 48, 58, 0.4);
-    z-index: 10;
-}
-.header-menu.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-}
-.header-menu__modal  {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
-    width: 480px;
-    
-
-    background-color: var(--bgr-color);
-    text-align: center;   
-
-}*/
 /*Модальное окно + ФОРМА*/
 @media screen and (min-width: 340px) and (max-width: 480px) {
   .modal {
@@ -892,6 +855,37 @@ h1, h2, h3, p {
   text-align: center;
 }
 
+/*.header-menu {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;  
+    padding: 50px 30px;
+    overflow-y: scroll;
+    background-color: rgba(47, 48, 58, 0.4);
+    z-index: 10;
+}
+.header-menu.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+.header-menu__modal  {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    width: 480px;
+    
+
+    background-color: var(--bgr-color);
+    text-align: center;   
+
+}*/
+/*Модальное окно + ФОРМА*/
 .modal__btn {
   position: absolute;
   top: 8px;
@@ -1995,41 +1989,51 @@ textarea:focus {
 }
 
 /*Hero*/
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+@media screen and (min-width: 480px) {
   .hero {
-    background-image: url("../images/images1/hero/hero2480.jpg");
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images1/hero/hero1480.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images1/hero/hero1480.jpg);
+  }
+}
+
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images1/hero/hero2480.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images1/hero/hero2480.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/images1/hero/hero1768.jpg");
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images1/hero/hero1768.jpg");
     padding-top: 118px;
     padding-bottom: 118px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images1/hero/hero1768.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images1/hero/hero1768.jpg);
   }
 }
 
-@media screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../images/images1/hero/hero2768.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images1/hero/hero2768.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images1/hero/hero2768.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/images1/hero/imghero11200.jpg");
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images1/hero/imghero11200.jpg");
-    padding-top: 118px;
-    padding-bottom: 118px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images1/hero/imghero11200.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images1/hero/imghero11200.jpg);
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 
-@media screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .hero {
-    background-image: url("../images/images1/hero/imghero21200.jpg");
-    padding-top: 200px;
-    padding-bottom: 200px;
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images1/hero/imghero21200.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images1/hero/imghero21200.jpg);
   }
 }
 
@@ -2038,10 +2042,6 @@ textarea:focus {
   margin-left: auto;
   margin-right: auto;
   max-width: 1600px;
-  padding-top: 118px;
-  padding-bottom: 118px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/images1/hero/hero1480.jpg");
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images1/hero/hero1480.jpg");
   background-color: var(--bgr-color);
   background-repeat: no-repeat;
   background-position: center;
