--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,11 +2,11 @@
 
 .logo {
     display: inline-block;
+    align-items: flex-start;
 
     padding-top: 25px;
     padding-bottom: 25px;
   
-
     color: var(--accent-text);
     font-family: 'Raleway';
     font-weight: 700;
