--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,51 +1,61 @@
 
         /*Hero*/
-
-        @media (min-resolution: 2dppx) {       
+        @media screen and (min-width: 480px) {
         .hero {
-          background-image: url('../images/images1/hero/hero2480.jpg');
+          padding-top: 118px;
+          padding-bottom: 118px;      
+          background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+          url(../images/images1/hero/hero1480.jpg);
+          }
+
+          @media screen and (min-device-pixel-ratio: 2),
+          screem and(min-resolution:192dpi),
+          screen and(min-resolution:2dppx) {
+          .hero {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+              url(../images/images1/hero/hero2480.jpg);
         }
       }
-
+    }
+      
       @media screen and (min-width: 768px) {
         .hero {
-            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('../images/images1/hero/hero1768.jpg');
-            padding-top: 118px;
-            padding-bottom: 118px;
-        }
-        @media (min-resolution: 2dppx) {       
-            .hero {
-              background-image: url('../images/images1/hero/hero2768.jpg');            
-            }
+          padding-top: 118px;
+          padding-bottom: 118px;      
+          background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+              url(../images/images1/hero/hero1768.jpg);
           }
+        
+        @media screen and (min-device-pixel-ratio: 2),
+          screem and(min-resolution:192dpi),
+          screen and(min-resolution:2dppx) {
+            .hero {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../images/images1/hero/hero2768.jpg);
+          }
+        }
       }
       @media screen and (min-width: 1200px) {
         .hero {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('../images/images1/hero/imghero11200.jpg');
-            padding-top: 118px;
-            padding-bottom: 118px;   
+            url(../images/images1/hero/imghero11200.jpg);
+            padding-top: 200px;
+            padding-bottom: 200px;   
         }
-        @media (min-resolution: 2dppx) {       
-            .hero {
-              background-image: url('../images/images1/hero/imghero21200.jpg');
-              padding-top: 200px;
-              padding-bottom: 200px;   
-            }
-          }
+        @media screen and (min-device-pixel-ratio: 2),
+        screem and(min-resolution:192dpi),
+        screen and(min-resolution:2dppx) {
+        .hero-section {
+          background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../images/images1/hero/imghero21200.jpg);
+        }
       }
-
-        
+      }        
         .hero {            
             position: relative;          
             margin-left: auto;
             margin-right: auto;         
-            max-width: 1600px;
-            padding-top: 118px;
-            padding-bottom: 118px;   
-            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('../images/images1/hero/hero1480.jpg');
+            max-width: 1600px;           
             background-color: var(--bgr-color);        
             background-repeat: no-repeat;
             background-position: center;
